--- a/_lessons/techniques-trade.html
+++ b/_lessons/techniques-trade.html
@@ -227,7 +227,7 @@ group by 1
 ]
 
 ---
-# ❓ 7: Actually, I want to test that query!
+# ❓ 7: Actually, I want to use that query as a test!
 
 (But I still don't want it to be a model.)
 
@@ -502,7 +502,7 @@ Essentially we want to run a statement _like_ this
 ???
 Side step into hooks very quickly to look at it as a way to do this
 ---
-# Tool 1: Hooks
+# Tool A: Hooks
 * Configured from the `dbt_project.yml` file or in a model
 
 ```yml
