--- a/_jumpstart/index.html
+++ b/_jumpstart/index.html
@@ -205,7 +205,7 @@ week4_form: https://forms.gle/nam1Z2VZ6nDbPu8z9
                         <li><a href="{{ base_url }}/ondemand/43216f3592f37d744f7d544614a2f997a5739641/modules" target="_blank">Instructional Videos:</a>
                             Tests, Docs, Sources, and Deployment.</li>
                         <li><strong>Submit Pull-Request:</strong> Practice Exercises for Tests, Docs, and Sources and submit a PR to your instructor with this template</li>
-                        <li><a class="disabled" href="{{ page.week2_form }}" target="_blank">Week 2 Check for Understanding Form.</a></li>
+                        <li><a href="{{ page.week2_form }}" target="_blank">Week 2 Check for Understanding Form.</a></li>
                         <li>Note: All practice exercises and forms should be completed 24 hours before the next office hours. This will give adequate time for your instructor to prepare for the office hours.</li>
                     </ul>
                 </div>
