update week 3 exercises

--- a/_jumpstart/index.html
+++ b/_jumpstart/index.html
@@ -231,7 +231,7 @@ week4_form: https://forms.gle/nam1Z2VZ6nDbPu8z9
                 <div class="col-md-12 text-large">
                     <ul>
                         <li><a href="{{ base_url }}/ondemand/43216f3592f37d744f7d544614a2f997a5739641/modules" target="_blank">Instructional Videos:</a> Jinja Primer, Macros, and Packages.</li>
-                        <li><strong>Submit Pull-Request:</strong> Practice Exercises for Materializations and Analyses + Seeds and submit a PR to your instructor with this template</li>
+                        <li><strong>Submit Pull-Request:</strong> Practice Exercises for Jinja Primer, Macros, and Packages and submit a PR to your instructor with this template</li>
                         <li><a href="{{ page.week3_form }}" target="_blank">Week 3 Check for Understanding Form.</a></li>
                         <li>Note: All practice exercises and forms should be completed 24 hours before the next office hours. This will give adequate time for your instructor to prepare for the office hours.</li>
                     </ul>
