Add more detailed diagram of split page view

--- a/_lessons/incremental.html
+++ b/_lessons/incremental.html
@@ -519,6 +519,15 @@ A page view has events either side of our cut off timestamp?
 
 <img src="/ui/img{{page.id}}/split-pageview.png" class="img-center" style="width: 50%;">
 
+---
+
+# What if...
+
+A page view has events either side of our cut off timestamp?
+
+<img src="/ui/img{{page.id}}/split-pageview-zoom-in.png" class="img-center">
+
+
 --
 We'd end up under-counting the page view duration.
 
