--- a/_lessons/thumbnails.html
+++ b/_lessons/thumbnails.html
@@ -5,27 +5,32 @@ title: Testing
 ---
 class: title, center, middle
 
-# .thumbnail-white[Sources]
+# .thumbnail-white[Materializations]
 
-## .thumbnail-orange[What are sources?]
-
----
-class: title, center, middle
-
-# .thumbnail-white[Tests]
-
-## .thumbnail-orange[What is testing?]
+## .thumbnail-orange[What are materializations in dbt?]
 
 ---
 class: title, center, middle
 
-# .thumbnail-white[Sources]
+# .thumbnail-white[Materializations]
 
-## .thumbnail-orange[Documenting and Testing Sources]
+## .thumbnail-orange[Tables, Views, and Ephemeral Models]
+
 
 ---
 class: title, center, middle
 
-# .thumbnail-white[Sources]
+# .thumbnail-white[Materializations]
 
-## .thumbnail-orange[Snapshot Freshness]
+## .thumbnail-orange[Incremental Models]
+
+
+---
+class: title, center, middle
+
+# .thumbnail-white[Materializations]
+
+## .thumbnail-orange[Snapshots]
+
+
+
