--- a/_lessons/thumbnails.html
+++ b/_lessons/thumbnails.html
@@ -30,7 +30,13 @@ class: title, center, middle
 
 # .thumbnail-white[Materializations]
 
-## .thumbnail-orange[Snapshots]
+## .thumbnail-orange[What are Snapshots]
 
+---
+class: title, center, middle
+
+# .thumbnail-white[Materializations]
+
+## .thumbnail-orange[Snapshots in dbt]
 
 
