spell check on demand

--- a/_ondemand/43216f3592f37d744f7d544614a2f997a5739641/index.html
+++ b/_ondemand/43216f3592f37d744f7d544614a2f997a5739641/index.html
@@ -36,7 +36,7 @@ title: On Demand
 </style>
 
 
-<!-- This page will automatically update for markdown pages that have been creted.  The mapping of modules to page names 
+<!-- This page will automatically update for markdown pages that have been created.  The mapping of modules to page names 
 is located in _data/ondemand.yml -->
 
 <h1>dbt Learn on demand</h1>
