add in post-jumpstart language

--- a/_jumpstart/index.html
+++ b/_jumpstart/index.html
@@ -270,3 +270,33 @@ week4_form: https://forms.gle/nam1Z2VZ6nDbPu8z9
         </div>
     </div>
 </div>
+
+<div class="bg-silver-light">
+    <div class="section">
+        <div class="text-contain">
+
+            <div class="row" id="post-jumpstart">
+                <div class="col-lg-12 col-bottomless">
+                    <div class="text-contain text-center">
+                        <h3 >Post Jumpstart</h3>
+                    </div>
+                    
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12 text-large">
+                    <ul>
+                        <li>The last meeting for Jumpstart will take place as the Week 4 Office Hour. Once this is completed, homework and pull request reviews will no longer be reviewed. All future questions should be directed to your Account Manager.  
+</li>
+                        <li><strong>dbt Slack Channel</strong> The Jumpstart specific slack channel will be deprecated a week after Jumpstart ended.</li>
+                        <li><strong>Snowflake</strong> Your Snowflake user will be deprecated after 45 days from the start of the Jumpstart program. </li>
+                        <li><strong>Jumpstart videos</strong> These videos will be always available to you. Feel free to use the videos for internal training or reference.</li>
+                        <li><strong>dbt Cloud Training Account</strong> This account will be deprecated after 45 days from the start of the Jumpstart program.</li>
+                        <li><strong>Github repository</strong> Since this entity is on your personal account, this is yours. If you need any additional pull request reviews, we recommend asking your fellow classmates to review.</li>
+                    </ul>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
