add kick off slides link

--- a/_jumpstart/index.html
+++ b/_jumpstart/index.html
@@ -128,15 +128,16 @@ week4_form: https://forms.gle/nam1Z2VZ6nDbPu8z9
 					<div class="text-contain">
 						<center><h3 class="h2">What to Expect</h3></center>
 						<p>
-                            <h4>Before the Kickoff Meeting</h4>
+                            <h4>Before the Kick-Off Meeting</h4>
                             <ul>    
                                 <li>Join private Jumpstart slack channel in dbt Slack.</li>
                                 <li>Accept the dbt Cloud Invitation and Login to Snowflake.</li>
                                 <li>Create an empty repository in your personal GitHub account and send the link to your instructor.</li>
                             </ul>
-                            <h4>Kickoff Meeting</h4>
+                            <h4>Kick-Off Meeting</h4>
                             <ul>    
                                 <li> Introductions and Overview of the Jumpstart Program.</li>
+                                <li><a href=""{{ base_url }}/jumpstart/kickoff#1"" target="_blank">Kick-Off Slides</a></li>
                                 <li> Q+A Session for Jumpstart Logistics.</li>
                             </ul>
                             <h4>Asynchronous Sessions</h4>
