--- a/_jumpstart/index.html
+++ b/_jumpstart/index.html
@@ -264,7 +264,7 @@ week4_form: https://forms.gle/nam1Z2VZ6nDbPu8z9
                         <li><a href="{{ page.week4_form }}" target="_blank">Week 4 Check for Understanding Form.</a></li>
                         <li>Note: All practice exercises and forms should be completed 24 hours before the next office hours. This will give adequate time for your instructor to prepare for the office hours.</li>
                         <li>Close out the course with final questions, feedback, and certificates.</li>
-                        <<li><<a href="https://forms.gle/HEh6WYmKjvtByZGW8"target="_blank">Complete Post-Jumpstart Survey</a></li>
+                        <li><a href="https://forms.gle/HEh6WYmKjvtByZGW8"target="_blank">Complete Post-Jumpstart Survey</a></li>
                     </ul>
                 </div>
             </div>
