--- a/_jumpstart/index.html
+++ b/_jumpstart/index.html
@@ -137,7 +137,7 @@ week4_form: https://forms.gle/nam1Z2VZ6nDbPu8z9
                             <h4>Kick-Off Meeting</h4>
                             <ul>    
                                 <li> Introductions and Overview of the Jumpstart Program.</li>
-                                <li><a href=""{{ base_url }}/jumpstart/kickoff#1"" target="_blank">Kick-Off Slides</a></li>
+                                <li><a href="{{ base_url }}/jumpstart/kickoff#1" target="_blank">Kick-Off Slides</a></li>
                                 <li> Q+A Session for Jumpstart Logistics.</li>
                             </ul>
                             <h4>Asynchronous Sessions</h4>
