--- a/_jumpstart/index.html
+++ b/_jumpstart/index.html
@@ -273,7 +273,7 @@ week4_form: https://forms.gle/nam1Z2VZ6nDbPu8z9
     </div>
 </div>
 
-<div class="bg-silver-light">
+<div class="bg-white">
     <div class="section">
         <div class="text-contain">
 
