Feature/update jumpstart landing page with post-jumpstart information & link kick off slides (#131)
* add in post-jumpstart language

* add kick off slides link

* add in link to post-jumpstart survey

* Update _jumpstart/index.html

Co-authored-by: Kyle Coapman <kcoapman@fishtownanalytics.com>

* Update _jumpstart/index.html

Co-authored-by: Kyle Coapman <kcoapman@fishtownanalytics.com>

* Update _jumpstart/index.html

Co-authored-by: Kyle Coapman <kcoapman@fishtownanalytics.com>

Co-authored-by: Kyle Coapman <kcoapman@fishtownanalytics.com>

--- a/_jumpstart/index.html
+++ b/_jumpstart/index.html
@@ -128,15 +128,16 @@ week4_form: https://forms.gle/nam1Z2VZ6nDbPu8z9
 					<div class="text-contain">
 						<center><h3 class="h2">What to Expect</h3></center>
 						<p>
-                            <h4>Before the Kickoff Meeting</h4>
+                            <h4>Before the Kick-Off Meeting</h4>
                             <ul>    
                                 <li>Join private Jumpstart slack channel in dbt Slack.</li>
                                 <li>Accept the dbt Cloud Invitation and Login to Snowflake.</li>
                                 <li>Create an empty repository in your personal GitHub account and send the link to your instructor.</li>
                             </ul>
-                            <h4>Kickoff Meeting</h4>
+                            <h4>Kick-Off Meeting</h4>
                             <ul>    
                                 <li> Introductions and Overview of the Jumpstart Program.</li>
+                                <li><a href="{{ base_url }}/jumpstart/kickoff#1" target="_blank">Kick-Off Slides</a></li>
                                 <li> Q+A Session for Jumpstart Logistics.</li>
                             </ul>
                             <h4>Asynchronous Sessions</h4>
@@ -263,6 +264,37 @@ week4_form: https://forms.gle/nam1Z2VZ6nDbPu8z9
                         <li><a href="{{ page.week4_form }}" target="_blank">Week 4 Check for Understanding Form.</a></li>
                         <li>Note: All practice exercises and forms should be completed 24 hours before the next office hours. This will give adequate time for your instructor to prepare for the office hours.</li>
                         <li>Close out the course with final questions, feedback, and certificates.</li>
+                        <li><a href="https://forms.gle/HEh6WYmKjvtByZGW8"target="_blank">Complete Post-Jumpstart Survey</a></li>
+                    </ul>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+<div class="bg-white">
+    <div class="section">
+        <div class="text-contain">
+
+            <div class="row" id="post-jumpstart">
+                <div class="col-lg-12 col-bottomless">
+                    <div class="text-contain text-center">
+                        <h3 >Post Jumpstart</h3>
+                    </div>
+                    
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12 text-large">
+                    <ul>
+                        <li>The last meeting for Jumpstart will take place as the Week 4 Office Hour. Once this is completed, homework and pull request reviews will no longer be reviewed. All future questions should be directed to your Account Manager.  
+</li>
+                        <li><strong>dbt Slack Channel</strong> The Jumpstart specific slack channel will be deprecated a week after Jumpstart ended.</li>
+                        <li><strong>Snowflake</strong> Your Snowflake user will be deprecated after 45 days from the start of the Jumpstart program. </li>
+                        <li><strong>Jumpstart videos</strong> These videos will be always available to you. Feel free to use the videos for internal training or reference.</li>
+                        <li><strong>dbt Cloud Training Account</strong> This account will be deprecated after 45 days from the start of the Jumpstart program.</li>
+                        <li><strong>Github repository</strong> Since this entity is on your personal account, this is yours. If you need any additional pull request reviews, we recommend asking your fellow classmates to review.</li>
                     </ul>
                 </div>
             </div>
