coap - slight tweaks

--- a/_lessons/data-warehouses.html
+++ b/_lessons/data-warehouses.html
@@ -351,7 +351,7 @@ class: subtitle
 # Checkpoint:
 
 What type of database should you use if...
-- You are building an application for tracking web events?
+- You are creating a site to write reviews of movies, books, and music?
 --
 
 - You want to combine data from Snowplow and Stripe to visualize attribution data in Looker?
@@ -474,7 +474,7 @@ class: subtitle
 
 --
 
-- How does knowledge of the 'physical' aspects of a data warehouse impact our work as analyts?
+- How does knowledge of the 'physical' aspects of a data warehouse impact our work as analysts?
 
 --
 
