Update checkpoint per feedback

--- a/_lessons/data-warehouses.html
+++ b/_lessons/data-warehouses.html
@@ -351,7 +351,7 @@ class: subtitle
 # Checkpoint:
 
 What type of database should you use if...
-- You are creating a site to write reviews of movies, books, and music?
+- You are creating a site where users can write reviews of movies, books, and music?
 --
 
 - You want to combine data from Snowplow and Stripe to visualize attribution data in Looker?
